--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apicall",
   "version": "1.0.0",
   "description": "hng backend0 task",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
